--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* 
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -47,4 +51,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
+} */
